--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <link rel="stylesheet" href="styles.css" />
 
-<div class="card" >
+<div class="card0" >
+</div>
+<div class="card1" >
+</div>
+<div class="card2" >
 </div>
 <script src = "scripts.js" ></script> 
