--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <link rel="stylesheet" href="styles.css" />
 
-<div class="card0" >
-</div>
-<div class="card1" >
-</div>
-<div class="card2" >
+<div class="card-container">
+    <div class="card0" >
+    </div>
+    <div class="card1" >
+    </div>
+    <div class="card2" >
+    </div>
 </div>
 <script src = "scripts.js" ></script> 
