--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="styles.css" />
 
+<div class ="title">
+    Dark Theme </div>
 <div class="card-container">
     <div class="card0" >
     </div>
